src/objects/DSCORGPKG__Maintain_Triggered_Append_Clean__c.object
<CustomObject>
    <fields>
        <fullName>DSCORGPKG__Object_Type__c</fullName>
        <label>Object Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Record_Ids__c</fullName>
        <label>Record Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DSCORGPKG__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DSCORGPKG__Status</valueSetName>
        </valueSet>
    </fields>
    <label>Maintain Triggered Append &amp; Clean</label>
    <nameField>
        <displayFormat>MTAP-{0000000}</displayFormat>
        <label>Maintain Triggered Append &amp; Clean Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maintain Triggered Append &amp; Clean</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>